# align-system

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  baseline_system.py  baseline_system_local_files.py  dockerfile  jsonify_itm_dataset.py  prompts.py  pyproject.toml  retrieval_inspector.py  run_eval.sh  setup.py
adm_configs/: single_kdma_adm_config_high_incontext.yml  single_kdma_adm_config_incontext.yml  single_kdma_adm_config_low_baseline.yml  single_kdma_adm_config_low_incontext.yml
adm_configs/metrics-evaluation/delivered/: hybrid_kaleido.yml
algorithms/: delphi.py  llama_index.py
align_system/: exceptions.py
align_system/algorithms/: __init__.py  abstracts.py  action_parameter_completion_adm_component.py  adms.py  alignment_adm_component.py  apply_treatment.py  argmax_alignment_adm_component.py  cage_action_parameter_completion_adm_component.py  chat_kdma_predicting_adm.py  choice_generator_adm_component.py  choice_history_adm_component.py  choose_idx_adm_component.py  claude_inference_engine.py  codeact_agent_adm.py  comparative_regression_adm_component.py  direct_medical_regression_adm_component.py  direct_regression_adm_component.py  direct_regression_system_prompt.py  icl_adm_component.py  io_heuristic.py  kaleido_adm.py  kaleido_adm_component.py  llama_2_multi_kdma_adm.py  llama_2_single_kdma_adm.py  llama_index.py  llm_chat_baseline.py  max_heuristic.py  mcts_candidate_adm_component.py  mcts_component.py  md_heuristic.py  misc_itm_adm_components.py  mj_heuristic.py  multi_comparison_adm.py  ollama_inference_engine.py  openai_chat_baseline.py  openai_inference_engine.py  oracle_adm.py  outlines_adm.py  outlines_baseline_adm_component.py  outlines_decision_history_adm.py  (+17 more)
align_system/algorithms/decision_flow_adm/: __init__.py  attribute_fine_grained_stage_component.py  attribute_stage_component.py  decision_flow_inference_engine.py  decision_flow_stages.py  express_stage_component.py  express_stage_unstructured.py  extraction_stage_component.py  filter_stage_component.py  secret.py  utils.py  (+5 more)
align_system/cli/: run_align_system.py  run_chat_baseline.py
align_system/configs/: action_based.yaml  multi_adm.yaml
align_system/data_models/: attribute.py  dialog.py  local_ph1_ta3_enums.py
align_system/documents/: Salt.md  __init__.py  start.md  start_triage_flowchart.md
align_system/drivers/: ai2thor_driver.py  itm_open_world.py  itm_phase1.py  itm_phase2_openworld.py
align_system/evaluation/: adm_evaluator.py
align_system/interfaces/: abstracts.py  ai2thor_env.py  ai2thor_interface.py  cage_action_based_service.py  cia_cage_service.py  cia_triad.py  csv_file_interface.py  input_output_file.py  local_files.py  ta1_adept_service.py  ta1_soartech_service.py  ta3_caci_action_based_service.py
align_system/kaleido/: kaleido_system.py
align_system/prompt_engineering/: common.py  kdma_descriptions.yml  outlines_prompts.py  system_message_providers.py  tagging_prompts.py
align_system/tests/: test_alignment_adm_component.py  test_hydra_utils.py
align_system/utils/: __init__.py  adm_utils.py  alignment_utils.py  backoff.py  generic.py  hydra_utils.py  hydrate_state.py  incontext_utils.py  kde_utils.py  outlines_prompts_utils.py  structured_data_utils.py  version.py
configs/adm/: multi_kdma_baseline.yaml
configs/alignment_target/: multi_high.yaml
docs/: accessing_llama_2.md  developer_setup.md  pipeline_adms.md
example_data/input_output_files/: test_multi_training_input_output.json
experimental/: explore_guidance.py  in_context_learning.py
scripts/: run-tagging-comparison.sh  run-tagging-comparison.slurm
scripts/statefulness_poc/: custom_input_output copy.json  custom_input_output.json  run-state-poc.sh
tests/: run_integration_test.py
(+1116 files in other folders)
