[project]
name = "align-system"
version = "0.5.10"
description = ""
authors = [{name = "David Joy", email = "10147749+dmjoy@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "bert-score>=0.3.13",
    "hydra-core>=1.3.2",
    "ipdb>=0.13.13",
    "mistral-common>=1.9.1",
    "numpy>=1.26.4",
    "outlines>=1.2.9",
    "rich>=13.6.0",
    "pytest>=9.0.2",
    "scikit-learn>=1.7.2",
    "swagger-client",
    "transformers>=5.1.0",
    "ubelt>=1.4.1",
    "vllm>=0.11.0",
]

[tool.setuptools.packages.find]
include = ["align_system*"]

[project.scripts]
run_align_system = "align_system.cli.run_align_system:main"

[tool.uv.sources]
swagger-client = { git = "https://github.com/NextCenturyCorporation/itm-evaluation-client.git" }
