[project]
name = "align-system"
version = "0.5.10"
description = ""
authors = [{name = "David Joy", email = "10147749+dmjoy@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "bert-score>=0.3.13",
    "hydra-core>=1.3.2",
    "ipdb>=0.13.13",
    "mistral-common>=1.9.1",
    "numpy>=1.26.4",
    "outlines>=1.2.9",
    "rich>=13.6.0",
    "pytest>=9.0.2",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.2",
    "swagger-client==0.5.2",
    "transformers>=5.1.0",
    "ubelt>=1.4.1",
    "vllm>=0.11.0",
]

[tool.uv.sources]
swagger-client = { git = "https://github.com/NextCenturyCorporation/itm-evaluation-client.git" }

[dependency-groups]
openai = [
    "openai>=2.15.0,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
]
anthropic = [
    "anthropic>=0.45.0,<1.0.0",
]
llama-index-retriever = [
    "langchain>=0.0.308,<0.1",
    "llama-index>=0.8.21,<0.9",
]

[project.scripts]
run_align_system = "align_system.cli.run_align_system:main"

[tool.uv]
find-links = ["https://download.pytorch.org/whl/cu118"]

[build-system]
requires = ["uv_build>=0.7.2,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "align_system"
module-root = ""